@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-09T01:22:36Z",
+  "timestamp" : "2022-11-09T08:22:09Z",
   "count_outdated" : 645,
   "uniques_outdated" : 368,
-  "count" : 670,
+  "count" : 669,
   "uniques" : 380,
   "clones" : [
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
