@@ -1,3 +1,11 @@
+2022-11-09T08:22:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3426461250 # 1012
+* notice: last 14d: unq all: 5 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 368 645 / 380 670
+* notice: next accum: outdated-unq outdated-all / unq all: 368 645 / 380 669
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-10-26]
+
 2022-11-09T01:22:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3424588531 # 1011
 * notice: last 14d: unq all: 5 25
